Finish hotstuff section

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ header{
 /* hot-stuff-container */
 
 .hot-stuff-container{
-  padding: 60px 0px;
+  padding: 60px 0px 100px 0px;
 }
 
 .hot-stuff-hearder{
