--- a/style.css
+++ b/style.css
@@ -50,6 +50,21 @@ ul{
     margin: 0 auto;
 }
 
+.btn{
+    display: inline-block;
+    color: #fff;
+    border-radius: 10px;
+    font-weight: 600;
+    padding:8px 50px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all .30s ease-in-out;
+}
+
+.btn:hover{
+    scale:.90;
+}
+
 /* navigation */
 
 header{
@@ -135,20 +150,10 @@ header{
 
 .hero_btn{
     margin-top: 13px;
-    display: inline-block;
     background-color: #3882f6;
-    color: #fff;
-    border-radius: 10px;
-    font-weight: 600;
-    padding:8px 50px;
-    font-size: 20px;
-    cursor: pointer;
-    transition: all .30s ease-in-out;
 }
 
-.hero_btn:hover{
-    scale:.90;
-}
+
 
 .hero .right{
     width: 50%;
@@ -234,4 +239,32 @@ header{
     font-weight: bolder;
     color: #1f2937;
     font-size:24px;
+}
+
+/* call to action */
+.call-to-action{
+    display: flex;
+    align-items:center;
+    justify-content: space-around;
+    background-color:#3882f6 ;
+    padding: 50px 0px;
+    border-radius: 10px;
+    margin:100px auto;
+}
+
+.call-to-action_text h3{
+    color: #fff;
+    font-weight:bold;
+    font-size: 20px;
+}
+
+.call-to-action_text p{
+    color:#e5e7eb;
+    font-size: 16px;
+    font-weight:lighter;
+}
+
+.call-to-action_btn{
+    border: 2px solid #fff;
+    padding:3px 25px;
 }
