--- a/style.css
+++ b/style.css
@@ -268,3 +268,15 @@ header{
     border: 2px solid #fff;
     padding:3px 25px;
 }
+
+footer{
+    background-color: #1f2937;
+    padding: 30px 10px;
+    text-align: center;
+}
+
+footer p{
+ font-weight:lighter;
+ font-size: 16px;
+ color: #fff;
+}
